# cookiecutter-data-science

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .env  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
{{ cookiecutter.repo_name }}/dev_tools/: make_release.py
{{ cookiecutter.repo_name }}/docs/pdoc_template/: config.mako  credits.mako  head.mako  html.mako  logo.mako
{{ cookiecutter.repo_name }}/experiments/logs/journals/: logbook.md  update.md
{{ cookiecutter.repo_name }}/notebooks/: 1-colab_notebook_template.ipynb  README.md  colab_notebook_template.ipynb
{{ cookiecutter.repo_name }}/src/: setup.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/: __init__.py
